--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,10 @@
 
 .swiper-container {
-    width: 600px;
-    height: 300px;
+    width: 800px;
+    height: 600px;
+}
+
+img {
+	width: 600px;
+	height: 800px;
 }
